[package]
name = "hastur"
version = "0.1.0"
authors = ["Alexey Aristov <aav@acm.org>"]
edition = "2021"

[dependencies]
hastur_macro = { path = "../hastur_macro" }

futures = { version = "0.3" }
async-std = { version = "1.12", features = ["attributes"] }
crossbeam = "0.8"
dynamic = "0.2"
atomic_refcell = "0.1"
dashmap = "5.5"
lazy_static = "1.4"
tracing = "0.1"
tracing-futures = "0.2"
cfg-if = "1.0"
lazycell = "1.3.0"
derive_builder = "0.13"
async-metronome = "0.3.0"

[dev-dependencies]
criterion = "0.5.1"
simplelog = "0.12"
tracing-subscriber = "0.3"

[[bench]]
name = "skynet"
harness = false
